<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_workouts">WorkoutsActivity</string>
    <string name="tv1">First Tab</string>
    <string name="tv2">Second Tab</string>
    <string name="tv3">Third Tab</string>
    <string name="create">Create a New Workout:</string>
    <string name="workoutname">Workout Name:</string>
    <string name="wrkouthint">ie: Legs Workout</string>
    <string name="exercisename">Exercise Names:</string>
    <string name="exercisehint">ie: 20 Minutes of Biking</string>
    <string name="newbutton">Add+</string>
    <string name="title_activity_start_workout">StartWorkoutActivity</string>
    <string name="bFinish">Done!</string>
    <string name="tvEditWorkout">Edit Workout:</string>

</resources>